# ToDoListify-Backend

./: .env.example  Cargo.toml  README.md
migrations/: 20250420061815_user.sql  20250421054315_create_sessions_table.sql  20250425134824_create_user_trigger.sql  20250426140202_create_task_table.sql
src/: db.rs  error.rs  main.rs
src/handlers/: task.rs  user.rs
src/middlewares/: auth.rs
src/modules/: task.rs  user.rs
src/routes/: mod.rs  task.rs  user.rs
src/services/: auth.rs  mod.rs  task.rs  user.rs
