[package]
name = "todolistify"
version = "1.0.0"
edition = "2024"
description = "Simple to-do backend written in Rust with Axum and Tokio."
authors = ["Mohaned Sherhan"]
license = "MIT"
repository = "https://github.com/Mohaned2023/ToDoListify-Backend"

[[bin]]
name = "todolistify"
path = "src/main.rs"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
argon2 = "0.5.3"
axum = "0.8.3"
axum-extra = { version = "0.10.1", features = ["cookie"] }
cookie = "0.18.1"
dotenvy = "0.15.7"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4"] }
validator = { version = "0.20.0", features = ["derive"] }
